# simple-financial-instruments

./: README.md  log.yml  main.py  pyproject.toml
code/: run_refactored.py
code/src/: asset_inventory.py  main.py
code/src/application/dto/: portfolio_dto.py
code/src/application/use_cases/: analyze_portfolio_use_case.py  generate_template_use_case.py
code/src/config/: logging_config.py
code/src/domain/enums/: asset_type.py  money_code.py
code/src/domain/models/: asset.py  portfolio.py  report.py
code/src/domain/services/: asset_management_service.py  asset_repository.py  exchange_rate_service.py  report_service.py
code/src/infrastructure/config/: application_config.py
code/src/infrastructure/exchange_rates/: boc_hk_exchange_rate_service.py
code/src/infrastructure/providers/: boc_hk_provider.py
code/src/infrastructure/repositories/: yaml_asset_repository.py
code/src/institutions/: asset_type.py  money_code.py
code/src/institutions/boc_hk/: exchange_rate.py
code/src/institutions/bochk/: exchange_rate.py
code/src/institutions/cmb_china/: personal_finance.py
code/src/institutions/exchangerate_api/: exchange_rate.py
code/src/institutions/tian_tian/: fund.py
code/src/utils/: file_parse.py  http_client.py  serverchan_push.py  yaml_template_processor.py
code/test/case/institutions/boc_hk/: test_exchange_rate.py
code/test/case/institutions/boc_om/: aa.py
code/test/case/utils/: test_http_client.py  test_serverchan_push.py
config/: logging_config.py
institutions/bochk/: exchange_rate.py
tools/: http_client.py
(+4 files in other folders)
